--- a/Game2D_Mr.Gimmick/Game2D_Mr.Gimmick.vcxproj
+++ b/Game2D_Mr.Gimmick/Game2D_Mr.Gimmick.vcxproj
@@ -40,7 +40,20 @@
     <Image Include="Resources\Gimmick\brick.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Game.cpp" />
+    <ClCompile Include="GameObject.cpp" />
+    <ClCompile Include="Gimmick.cpp" />
+    <ClCompile Include="Sprite.cpp" />
+    <ClCompile Include="Textures.cpp" />
     <ClCompile Include="WinMain.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="CKeyEventHandler.h" />
+    <ClInclude Include="Game.h" />
+    <ClInclude Include="GameObject.h" />
+    <ClInclude Include="Gimmick.h" />
+    <ClInclude Include="Sprite.h" />
+    <ClInclude Include="Textures.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
