--- a/Game2D_Mr.Gimmick/Game2D_Mr.Gimmick.vcxproj
+++ b/Game2D_Mr.Gimmick/Game2D_Mr.Gimmick.vcxproj
@@ -38,8 +38,11 @@
     <Image Include="..\..\..\Resource\Tilesets\State6.png" />
     <Image Include="..\..\..\Resource\Tilesets\State7.png" />
     <Image Include="Resources\Gimmick\brick.png" />
+    <Image Include="Resources\Images\Gimmick\bg1.png" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Debug.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Gimmick.cpp" />
@@ -48,7 +51,9 @@
     <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Camera.h" />
     <ClInclude Include="CKeyEventHandler.h" />
+    <ClInclude Include="Debug.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Gimmick.h" />
