--- a/Game2D_Mr.Gimmick/Game2D_Mr.Gimmick.vcxproj
+++ b/Game2D_Mr.Gimmick/Game2D_Mr.Gimmick.vcxproj
@@ -48,8 +48,8 @@
     <ClCompile Include="Gimmick.cpp" />
     <ClCompile Include="Map.cpp" />
     <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="Textures.cpp" />
-    <ClCompile Include="TexturesManager.cpp" />
+    <ClCompile Include="Texture.cpp" />
+    <ClCompile Include="TextureManager.cpp" />
     <ClCompile Include="WinMain.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -61,8 +61,8 @@
     <ClInclude Include="Gimmick.h" />
     <ClInclude Include="Map.h" />
     <ClInclude Include="Sprite.h" />
-    <ClInclude Include="Textures.h" />
-    <ClInclude Include="TexturesManager.h" />
+    <ClInclude Include="Texture.h" />
+    <ClInclude Include="TextureManager.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
